--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fabric": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
